--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
     repositories {
         mavenCentral()
+      google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:4.0.2'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        google()
     }
 }
