--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 32
     buildToolsVersion '23.0.2'
 
     defaultConfig {
@@ -23,5 +23,5 @@ repositories {
 }
 
 dependencies {
-    compile project(':library')
+    implementation project(':library')
 }
