Updated gradle to a modern 7.3.1, removed old maven publication configuration and replaced it with one that is compatible with the newer gradle and that creates artifacts correctly using jitpack.io.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 32
-    buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 9
@@ -16,6 +15,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    namespace 'hotchemi.android.rate.sample'
 }
 
 repositories {
